--- a/app/client/head.html
+++ b/app/client/head.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="RBshop">
     <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
-    <script src="/vendor/d3/d3.js"></script>
+    <!-- <script src="/vendor/d3/d3.js"></script> -->
     <!--<script src="https://rawgit.com/newrelic-forks/d3-plugins-sankey/master/sankey.js"></script>-->
     <!--<script src="https://rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>-->
     <!--<script src="https://rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script>-->
